--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                             <a class="collapse-item" asp-area="" asp-controller="Categoria" asp-action="Index">Categorías</a>
                             <a class="collapse-item" asp-area="" asp-controller="Marca" asp-action="Index">Marcas</a>
                             <a class="collapse-item" asp-area="" asp-controller="Producto" asp-action="Index">Productos</a>
-                            <a class="collapse-item" asp-area="" asp-controller="AjusteInventario" asp-action="Index">Ajustes en Inventario</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Inventario" asp-action="Ajuste">Ajuste en Inventario</a>
                         </div>
                     </div>
                 </li>
@@ -153,8 +153,8 @@
                     <div id="collapseReportes" class="collapse" aria-labelledby="headingReportes" data-parent="#accordionSidebar">
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" asp-area="" asp-controller="Reporte" asp-action="Index">Reporte de Compras</a>
-                            <a class="collapse-item" asp-area="" asp-controller="Reporte" asp-action="Index">Reporte de Ventas</a>
-                            <a class="collapse-item" asp-area="" asp-controller="Reporte" asp-action="Index">Reporte de Ajustes</a>
+                            <a class="collapse-item" asp-area="" asp-controller="DetalleVenta" asp-action="Reportes">Reporte de Ventas</a>
+                            <a class="collapse-item" asp-area="" asp-controller="Inventario" asp-action="Ajuste">Reporte de Ajustes</a>
                         </div>
                     </div>
                 </li>
