--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetallesCompra/Create.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetallesCompra/Create.cshtml
@@ -6,29 +6,34 @@
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto> productos = ViewBag.Producto as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto>;
 }
 
-<h1>Crear</h1>
-
-<h4>Detalle Pedido</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Crear Detalle Pedido</h1>
+    </div>
+    <div class="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Cantidad" class="control-label"></label>
-                <input asp-for="Cantidad" class="form-control" />
-                <span asp-validation-for="Cantidad" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ValorTotal" class="control-label"></label>
-                <input asp-for="ValorTotal" class="form-control" />
-                <span asp-validation-for="ValorTotal" class="text-danger"></span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="Cantidad" class="control-label">Cantidad</label>
+                        <input asp-for="Cantidad" class="form-control" />
+                        <span asp-validation-for="Cantidad" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="ValorTotal" class="control-label">Valor Total</label>
+                        <input asp-for="ValorTotal" class="form-control" />
+                        <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
                     <div class="form-group">
-                        <label asp-for="IdCompra" class="control-label"></label>
+                        <label asp-for="IdCompra" class="control-label">Compra</label>
                         <select asp-for="IdCompra" class="form-control">
                             <option selected value="">SELECCIONAR</option>
                             @foreach (var item in compras)
@@ -39,11 +44,9 @@
                         <span asp-validation-for="IdCompra" class="text-danger"></span>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-4">
                     <div class="form-group">
-                        <label asp-for="IdProducto" class="control-label"></label>
+                        <label asp-for="IdProducto" class="control-label">Producto</label>
                         <select asp-for="IdProducto" class="form-control">
                             <option selected value="">SELECCIONAR</option>
                             @foreach (var item in productos)
@@ -56,9 +59,7 @@
                 </div>
             </div>
 
-
-            @*BOTONES EDITADOS CON ICONOS*@
-
+            <!-- BOTONES EDITADOS CON ICONOS -->
             <div class="form-group" style="margin-top: 10px;">
                 <button type="submit" class="btn btn-success" style="margin-right: 10px;">
                     <i class="fas fa-save"></i> Guardar
